--- a/MeanStackGuide/backend/package.json
+++ b/MeanStackGuide/backend/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
+    "mongodb": "^6.18.0",
     "mongoose": "^8.17.1"
   },
   "devDependencies": {
