--- a/MeanStackGuide/backend/package.json
+++ b/MeanStackGuide/backend/package.json
@@ -1,11 +1,16 @@
 {
   "dependencies": {
+    "@types/mongoose": "^5.11.96",
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
     "mongodb": "^6.18.0",
-    "mongoose": "^8.17.1"
+    "mongoose": "^8.17.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.33.0",
+    "@types/node": "^24.3.0",
+    "eslint": "^9.33.0",
+    "globals": "^16.3.0",
     "nodemon": "^3.1.10"
   },
   "scripts": {
