--- a/MeanStackGuide/backend/package.json
+++ b/MeanStackGuide/backend/package.json
@@ -4,7 +4,8 @@
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
     "mongodb": "^6.18.0",
-    "mongoose": "^8.17.2"
+    "mongoose": "^8.17.2",
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
