--- a/MeanStackGuide/backend/package.json
+++ b/MeanStackGuide/backend/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.2",
+    "mongoose-unique-validator": "^4.0.1",
     "multer": "^2.0.2"
   },
   "devDependencies": {
