--- a/MeanStackGuide/backend/package.json
+++ b/MeanStackGuide/backend/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^24.3.0",
     "eslint": "^9.33.0",
